--- a/lang/guile16/Makefile
+++ b/lang/guile16/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.1.1.1 2007/06/04 23:38:40 dmcmahill Exp $
+# $NetBSD: Makefile,v 1.2 2007/06/05 23:32:08 dmcmahill Exp $
 
 DISTNAME=		guile-1.6.8
+PKGREVISION=		1
 PKGNAME=		guile16-1.6.8
 CATEGORIES=		lang
 MASTER_SITES=		${MASTER_SITE_GNU:=guile/}
@@ -20,6 +21,8 @@ INFO_FILES=		# PLIST
 TEST_DIRS=		${WRKSRC}
 TEST_TARGET=		check
 OWN_DIRS=		${PREFIX}/share/guile/site
+
+BUILDLINK_PASSTHRU_DIRS=	${PREFIX}/guile/1.6
 
 .include "../../mk/bsd.prefs.mk"
 
