--- a/net/rdesktop/Makefile
+++ b/net/rdesktop/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.31 2006/12/02 23:14:38 seb Exp $
+# $NetBSD: Makefile,v 1.32 2007/06/06 00:16:35 tnn Exp $
 #
 
 DISTNAME=		rdesktop-1.5.0
-PKGREVISION=		1
+PKGREVISION=		2
 CATEGORIES=		net
 MASTER_SITES=		${MASTER_SITE_SOURCEFORGE:=rdesktop/}
 
