--- a/sysutils/e2fsprogs/Makefile
+++ b/sysutils/e2fsprogs/Makefile
@@ -1,12 +1,9 @@
-# $NetBSD: Makefile,v 1.12 2006/04/07 19:54:16 jlam Exp $
+# $NetBSD: Makefile,v 1.13 2007/06/06 09:35:17 martti Exp $
 #
 
-DISTNAME=	e2fsprogs-1.32
+DISTNAME=	e2fsprogs-1.39
 CATEGORIES=	sysutils
-MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=e2fsprogs/} \
-		ftp://ftp.dei.uc.pt/.d4/linuxberg/files/console/system/ \
-		ftp://tsx-11.mit.edu/pub/linux/packages/ext2fs/ \
-		ftp://ftp.gwdg.de/pub/linux/mirrors/tsx-11/packages/ext2fs/
+MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=e2fsprogs/}
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	http://e2fsprogs.sourceforge.net/
@@ -14,7 +11,7 @@ COMMENT=	Second extended file system (ext2fs) management programs
 
 GNU_CONFIGURE=	yes
 USE_TOOLS+=	makeinfo
-INFO_FILES=	# PLIST.common
+INFO_FILES=	YES
 
 .include "../../mk/bsd.prefs.mk"
 
