--- a/mail/roundcube/files/roundcube.conf
+++ b/mail/roundcube/files/roundcube.conf
@@ -1,9 +1,9 @@
-# $NetBSD: roundcube.conf,v 1.1.1.1 2007/04/08 17:04:08 adrianp Exp $
+# $NetBSD: roundcube.conf,v 1.2 2007/06/06 18:40:16 adrianp Exp $
 #
 # RoundCube configuration file fragment for Apache
 
 <IfModule mod_alias.c>
-    Alias /roundcube/ "@RCDIR@/"
+    Alias /roundcube "@RCDIR@/"
 </IfModule>
 
 <Directory "@RCDIR@">
