--- a/mail/courier-imap/Makefile
+++ b/mail/courier-imap/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.59 2006/10/10 12:55:39 ben Exp $
+# $NetBSD: Makefile,v 1.60 2007/06/07 07:50:57 schmonz Exp $
 
 DISTNAME=	courier-imap-4.1.1
 PKGREVISION=	3
@@ -18,6 +18,12 @@ USE_LANGUAGES=		c c++
 USE_LIBTOOL=		yes
 
 PKG_SUPPORTED_OPTIONS+=	fam
+
+.include "../../mk/bsd.options.mk"
+
+.if !empty(PKG_OPTIONS:Mfam)
+.  include "../../mk/fam.buildlink3.mk"
+.endif
 
 # PKGNAME is a parameter to the following file
 PKGNAME=		${DISTNAME}
