--- a/mail/courier-mta/Makefile.common
+++ b/mail/courier-mta/Makefile.common
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile.common,v 1.2 2006/06/09 22:12:18 jlam Exp $
+# $NetBSD: Makefile.common,v 1.3 2007/06/07 07:50:57 schmonz Exp $
 #
 # Package Makefiles should include this file after setting PKGNAME and
 # PKG_SUPPORTED_OPTIONS.
@@ -42,19 +42,5 @@ CONFIGURE_ARGS+=	--with-db=db
 .include "../../mk/bdb.buildlink3.mk"
 
 CONFIGURE_ENV+=		SYSCONFTOOL_PERL=${PERL5:Q}
-
-# Note: This expression is the same as ${PKGBASE}, but the latter is
-# not defined yet, so we cannot use it here.
-PKG_OPTIONS_VAR=	PKG_OPTIONS.${PKGNAME:C/-[0-9].*//}
-.include "../../mk/bsd.options.mk"
-
-# The maildir subdirectory can be built with a "fam" option, but it's only
-# useful for the imap server and the webmail client.  Handle the option
-# here, but the corresponding package Makefiles should note that "fam" is
-# a supported option on their own.
-#
-.if !empty(PKG_OPTIONS:Mfam)
-.  include "../../mk/fam.buildlink3.mk"
-.endif
 
 .include "../../devel/pcre/buildlink3.mk"
