--- a/mail/up-imapproxy/Makefile
+++ b/mail/up-imapproxy/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.1.1.1 2006/05/08 21:58:31 adrianp Exp $
+# $NetBSD: Makefile,v 1.2 2007/06/07 15:12:01 taca Exp $
 
-DISTNAME=	up-imapproxy-1.2.4
+DISTNAME=	up-imapproxy-1.2.5
 CATEGORIES=	mail
 MASTER_SITES=	http://www.imapproxy.org/downloads/
 
@@ -20,16 +20,14 @@ SUBST_MESSAGE.paths=	Fixing hard coded paths.
 CONF_FILES=	${PREFIX}/share/examples/up-imapproxy/imapproxy.conf \
 			${PKG_SYSCONFDIR}/imapproxy.conf
 
+INSTALLATION_DIRS+= sbin share/doc/up-imapproxy share/examples/up-imapproxy
+
 .include "../../security/openssl/buildlink3.mk"
 .include "../../mk/pthread.buildlink3.mk"
 
 post-install:
-	${INSTALL_DATA_DIR} ${PREFIX}/share/doc/up-imapproxy
-	${INSTALL_DATA_DIR} ${PREFIX}/share/examples/up-imapproxy
-
 	${INSTALL_DATA} ${WRKSRC}/README ${PREFIX}/share/doc/up-imapproxy
 	${INSTALL_DATA} ${WRKSRC}/README.ssl ${PREFIX}/share/doc/up-imapproxy
-
 	${INSTALL_DATA} ${WRKSRC}/README.known_issues \
 		 ${PREFIX}/share/doc/up-imapproxy
 	${INSTALL_DATA} ${WRKSRC}/scripts/imapproxy.conf \
