--- a/net/net-snmp/Makefile
+++ b/net/net-snmp/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.59 2007/05/20 13:55:28 seb Exp $
+# $NetBSD: Makefile,v 1.60 2007/06/07 23:53:55 gdt Exp $
 
 DISTNAME=	net-snmp-5.4
 PKGREVISION=	1
@@ -15,6 +15,8 @@ CONFLICTS+=	nocol-[0-9]*	# bin/snmpget bin/snmpwalk
 
 USE_LIBTOOL=		yes
 GNU_CONFIGURE=		yes
+
+MAKE_JOBS_SAFE=		NO
 
 MAKE_ENV+=	OPSYS=${OPSYS:Q}
 
