--- a/mail/spamdyke/Makefile
+++ b/mail/spamdyke/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.6 2007/06/04 21:54:05 schmonz Exp $
+# $NetBSD: Makefile,v 1.7 2007/06/08 01:08:29 schmonz Exp $
 #
 
-DISTNAME=	spamdyke-2.6.1
+DISTNAME=	spamdyke-2.6.2
 CATEGORIES=	mail
 MASTER_SITES=	${HOMEPAGE}releases/
 EXTRACT_SUFX=	.tgz
@@ -13,9 +13,12 @@ COMMENT=	Monitors and intercept incoming SMTP connections to qmail
 BUILD_DIRS=	${PKGBASE} utils
 
 SUBST_CLASSES+=		paths
-SUBST_FILES.paths=	${PKGBASE}/spamdyke.c
+SUBST_FILES.paths=	${PKGBASE}/spamdyke.h
 SUBST_SED.paths=	-e 's,@PREFIX@,${PREFIX:Q},g'
+SUBST_SED.paths+=	-e 's,@QMAILDIR@,${QMAILDIR:Q},g'
 SUBST_STAGE.paths=	do-configure
+
+BUILD_DEFS+=		QMAILDIR
 
 INSTALLATION_DIRS=	bin share/doc/${PKGBASE}
 
@@ -27,7 +30,7 @@ do-install:
 		${INSTALL_PROGRAM} $${f} ${PREFIX}/bin;			\
 	done
 	cd ${WRKSRC}/utils;						\
-	for f in dnsmx dnsptr dnstxt; do				\
+	for f in dnsmx dnsptr dnstxt passwordcheck; do			\
 		${INSTALL_PROGRAM} $${f} ${PREFIX}/bin/spamdyke-$${f};	\
 	done;								\
 	for f in domain2path domainsplit; do				\
