--- a/audio/libdiscid/Makefile
+++ b/audio/libdiscid/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.2 2006/11/30 18:57:29 joerg Exp $
+# $NetBSD: Makefile,v 1.3 2007/06/08 06:42:32 wiz Exp $
 
 DISTNAME=	libdiscid-0.1.0
 CATEGORIES=	audio
@@ -9,10 +9,6 @@ HOMEPAGE=	http://musicbrainz.org/doc/libdiscid
 COMMENT=	Library for creating MusicBrainz DiscIDs
 
 ONLY_FOR_PLATFORM=	Darwin-*-* Linux-*-*
-
-# XXX We don't yet have libmusicbrainz, so this could be wrong; it
-# might end up packaged as libmusicbrainz3, for example.
-CONFLICTS=	libmusicbrainz>=3.0
 
 GNU_CONFIGURE=	yes
 USE_LIBTOOL=	yes
