--- a/audio/Makefile
+++ b/audio/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.356 2007/05/15 21:26:25 kristerw Exp $
+# $NetBSD: Makefile,v 1.357 2007/06/08 07:02:54 wiz Exp $
 #
 
 COMMENT=	Audio tools
@@ -162,6 +162,7 @@ SUBDIR+=	libmodplug
 SUBDIR+=	libmpcdec
 SUBDIR+=	libmpd
 SUBDIR+=	libmusepack
+SUBDIR+=	libmusicbrainz
 SUBDIR+=	libofa
 SUBDIR+=	libopendaap
 SUBDIR+=	libopenspc
