--- a/devel/p5-IO-Zlib/Makefile
+++ b/devel/p5-IO-Zlib/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.13 2006/11/05 17:49:34 joerg Exp $
+# $NetBSD: Makefile,v 1.14 2007/06/08 08:32:00 wiz Exp $
 
-DISTNAME=		IO-Zlib-1.04
+DISTNAME=		IO-Zlib-1.05
 PKGNAME=		p5-${DISTNAME}
 SVR4_PKGNAME=		p5izl
 CATEGORIES=		devel perl5
