--- a/databases/p5-DBIx-DBSchema/Makefile
+++ b/databases/p5-DBIx-DBSchema/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.2 2006/03/04 21:29:09 jlam Exp $
+# $NetBSD: Makefile,v 1.3 2007/06/08 08:37:15 wiz Exp $
 #
 
-DISTNAME=	DBIx-DBSchema-0.27
+DISTNAME=	DBIx-DBSchema-0.31
 PKGNAME=	p5-${DISTNAME}
 CATEGORIES=	databases perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=DBIx/}
