--- a/textproc/p5-Text-Glob/Makefile
+++ b/textproc/p5-Text-Glob/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.4 2006/11/07 14:53:10 obache Exp $
+# $NetBSD: Makefile,v 1.5 2007/06/08 08:42:27 wiz Exp $
 
-DISTNAME=	Text-Glob-0.07
+DISTNAME=	Text-Glob-0.08
 PKGNAME=	p5-${DISTNAME}
 SVR4_PKGNAME=	p5tgl
 
