--- a/security/p5-Crypt-Random/Makefile
+++ b/security/p5-Crypt-Random/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.14 2006/02/12 01:50:05 heinz Exp $
+# $NetBSD: Makefile,v 1.15 2007/06/08 11:26:04 heinz Exp $
 #
 
 DISTNAME=		Crypt-Random-1.25
@@ -14,6 +14,7 @@ COMMENT=		Perl5 interface to /dev/random
 DEPENDS+=		p5-Class-Loader>=2.00:../../devel/p5-Class-Loader
 DEPENDS+=		p5-Math-Pari>=2.001804:../../math/p5-Math-Pari
 
+PKG_DESTDIR_SUPPORT=	user-destdir
 PKG_INSTALLATION_TYPES=	overwrite pkgviews
 
 USE_LANGUAGES=		# empty
