--- a/www/p5-Test-WWW-Mechanize/Makefile
+++ b/www/p5-Test-WWW-Mechanize/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.2 2006/03/04 21:31:03 jlam Exp $
+# $NetBSD: Makefile,v 1.3 2007/06/08 11:34:30 wiz Exp $
 #
 
-DISTNAME=	Test-WWW-Mechanize-1.08
+DISTNAME=	Test-WWW-Mechanize-1.12
 PKGNAME=	p5-${DISTNAME}
 SVR4_PKGNAME=	p5twm
 CATEGORIES=	www perl5
