--- a/textproc/py-html2text/Makefile
+++ b/textproc/py-html2text/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.5 2007/01/19 00:55:06 schmonz Exp $
+# $NetBSD: Makefile,v 1.6 2007/06/08 11:39:02 wiz Exp $
 #
 
-DISTNAME=		html2text-2.25
-PKGREVISION=		1
+DISTNAME=		html2text-2.28
 PKGNAME=		${PYPKGPREFIX}-${DISTNAME}
 CATEGORIES=		textproc python
 MASTER_SITES=		${HOMEPAGE}
@@ -23,12 +22,10 @@ INSTALLATION_DIRS=	share/html2text
 do-extract:
 	${_PKG_SILENT}${_PKG_DEBUG}					\
 	${TR} -d '\r' < ${DISTDIR}/${DISTNAME}${EXTRACT_SUFX}		\
-		> ${WRKSRC}/${DISTNAME}${EXTRACT_SUFX}
+		> ${WRKSRC}/html2text.py
 
 do-install:
-	cd ${WRKSRC};							\
-	${INSTALL_SCRIPT} ${DISTNAME}${EXTRACT_SUFX}			\
-		${PREFIX}/share/html2text/html2text.py
+	${INSTALL_SCRIPT} ${WRKSRC}/html2text.py ${PREFIX}/share/html2text
 
 .include "../../lang/python/pyversion.mk"
 .include "../../mk/bsd.pkg.mk"
