--- a/sysutils/Makefile
+++ b/sysutils/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.401 2007/05/25 19:31:26 agc Exp $
+# $NetBSD: Makefile,v 1.402 2007/06/08 11:41:16 wiz Exp $
 #
 
 COMMENT=	System utilities
@@ -175,7 +175,6 @@ SUBDIR+=	ntfsprogs
 SUBDIR+=	nvnet
 SUBDIR+=	osname
 SUBDIR+=	p5-File-Copy-Recursive
-SUBDIR+=	p5-File-NCopy
 SUBDIR+=	p5-File-Remove
 SUBDIR+=	p5-GTop
 SUBDIR+=	p5-Lchown
