--- a/chat/irssi/Makefile.common
+++ b/chat/irssi/Makefile.common
@@ -1,9 +1,7 @@
-# $NetBSD: Makefile.common,v 1.5 2006/03/04 06:34:13 wiz Exp $
+# $NetBSD: Makefile.common,v 1.6 2007/06/08 11:53:48 wiz Exp $
 
 # Specific distribution information.
-IRSSI_VERSION=		0.8.10a
-# nevertheless, inside the tarball it is still 0.8.10
-WRKSRC=			${WRKDIR}/irssi-0.8.10
+IRSSI_VERSION=		0.8.11
 IRSSI_DISTNAME=		irssi-${IRSSI_VERSION}
 IRSSI_EXTRACT_SUFX=	.tar.bz2
 IRSSI_DISTFILE=		${IRSSI_DISTNAME}${IRSSI_EXTRACT_SUFX}
