--- a/databases/db4/Makefile
+++ b/databases/db4/Makefile
@@ -1,13 +1,13 @@
-# $NetBSD: Makefile,v 1.51 2007/05/23 11:47:40 obache Exp $
+# $NetBSD: Makefile,v 1.52 2007/06/08 12:23:50 wiz Exp $
 
-DISTNAME=		db-4.4.20
-PKGNAME=		${DISTNAME:S/db/db4/}
-PKGREVISION=		1
+DISTNAME=		db-4.5.20
+PKGNAME=		${DISTNAME:S/db/db4/}.2
 CATEGORIES=		databases
-MASTER_SITES=		http://download.oracle.com/berkeley-db/
+MASTER_SITES=		http://download.oracle.com/berkeley-db/ \
+			http://download-uk.oracle.com/berkeley-db/
 
-PATCHFILES=		patch.4.4.20.1 patch.4.4.20.2 patch.4.4.20.3 patch.4.4.20.4
-PATCH_SITES=		http://www.oracle.com/technology/products/berkeley-db/db/update/4.4.20/
+PATCHFILES=		patch.4.5.20.1 patch.4.5.20.2
+PATCH_SITES=		http://www.oracle.com/technology/products/berkeley-db/db/update/4.5.20/
 
 MAINTAINER=		pkgsrc-users@NetBSD.org
 HOMEPAGE=		http://www.oracle.com/database/berkeley-db/db/index.html
@@ -16,7 +16,7 @@ COMMENT=		Berkeley DB version 4 from Oracle
 PKG_INSTALLATION_TYPES=	overwrite pkgviews
 PKG_DESTDIR_SUPPORT=	user-destdir
 
-DIST_SUBDIR=		${PKGNAME_NOREV}
+DIST_SUBDIR=		db4-4.5.20
 USE_LANGUAGES=		c c++
 USE_LIBTOOL=		yes
 GNU_CONFIGURE=		yes
